fixed up the alignment in each page with a seperate selector

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -8,7 +8,7 @@
 /* Form Section  */
 
 .dashboard form {
-	margin: 4rem 0;
+	margin: 2.8rem 0 4rem 0;
 }
 
 .dashboard label {
